// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/marketplace/ AllPlugins should render with no plugins 1`] = `
<div
  className="no_plugins_div"
>
  <br />
  <PluginIcon
    className="icon__plugin"
  />
  <div
    className="mt-3 light"
  >
    <FormattedMessage
      defaultMessage="There are no plugins available at this time."
      id="marketplace_modal.no_plugins"
    />
  </div>
</div>
`;

exports[`components/marketplace/ AllPlugins should render with one plugin 1`] = `
<MarketplaceList
  plugins={
    Array [
      Object {
        "download_url": "https://github.com/mattermost/mattermost-plugin-nps/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
        "homepage_url": "https://github.com/mattermost/mattermost-plugin-nps",
        "installed_version": "",
        "manifest": Object {
          "description": "This plugin sends quarterly user satisfaction surveys to gather feedback and help improve Mattermost",
          "id": "com.mattermost.nps",
          "minServerVersion": "5.14.0",
          "name": "User Satisfaction Surveys",
          "version": "1.0.3",
        },
      },
    ]
  }
/>
`;

exports[`components/marketplace/ AllPlugins should render with plugins 1`] = `
<MarketplaceList
  plugins={
    Array [
      Object {
        "download_url": "https://github.com/mattermost/mattermost-plugin-nps/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
        "homepage_url": "https://github.com/mattermost/mattermost-plugin-nps",
        "installed_version": "",
        "manifest": Object {
          "description": "This plugin sends quarterly user satisfaction surveys to gather feedback and help improve Mattermost",
          "id": "com.mattermost.nps",
          "minServerVersion": "5.14.0",
          "name": "User Satisfaction Surveys",
          "version": "1.0.3",
        },
      },
      Object {
        "download_url": "https://github.com/mattermost/mattermost-test/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
        "homepage_url": "https://github.com/mattermost/mattermost-test",
        "installed_version": "1.0.3",
        "manifest": Object {
          "description": "This plugin is to test",
          "id": "com.mattermost.test",
          "minServerVersion": "5.14.0",
          "name": "Test",
          "version": "1.0.3",
        },
      },
    ]
  }
/>
`;

exports[`components/marketplace/ InstalledPlugins should render with multiple plugins 1`] = `
<MarketplaceList
  plugins={
    Array [
      Object {
        "download_url": "https://github.com/mattermost/mattermost-test/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
        "homepage_url": "https://github.com/mattermost/mattermost-test",
        "installed_version": "1.0.3",
        "manifest": Object {
          "description": "This plugin is to test",
          "id": "com.mattermost.test",
          "minServerVersion": "5.14.0",
          "name": "Test",
          "version": "1.0.3",
        },
      },
      Object {
        "download_url": "https://github.com/mattermost/mattermost-test/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
        "homepage_url": "https://github.com/mattermost/mattermost-test",
        "installed_version": "1.0.3",
        "manifest": Object {
          "description": "This plugin is to test",
          "id": "com.mattermost.test",
          "minServerVersion": "5.14.0",
          "name": "Test",
          "version": "1.0.3",
        },
      },
    ]
  }
/>
`;

exports[`components/marketplace/ InstalledPlugins should render with no plugins 1`] = `
<div
  className="no_plugins_div"
>
  <br />
  <PluginIcon
    className="icon__plugin"
  />
  <div
    className="mt-3 light"
  >
    <FormattedMessage
      defaultMessage="You do not have any plugins installed."
      id="marketplace_modal.no_plugins_installed"
    />
  </div>
  <button
    className="mt-5 style--none color--link"
    data-testid="Install-Plugins-button"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Install Plugins"
      id="marketplace_modal.install_plugins"
    />
  </button>
</div>
`;

exports[`components/marketplace/ InstalledPlugins should render with one plugin 1`] = `
<MarketplaceList
  plugins={
    Array [
      Object {
        "download_url": "https://github.com/mattermost/mattermost-test/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
        "homepage_url": "https://github.com/mattermost/mattermost-test",
        "installed_version": "1.0.3",
        "manifest": Object {
          "description": "This plugin is to test",
          "id": "com.mattermost.test",
          "minServerVersion": "5.14.0",
          "name": "Test",
          "version": "1.0.3",
        },
      },
    ]
  }
/>
`;

exports[`components/marketplace/ MarketplaceModal should render with error banner 1`] = `
<RootPortal>
  <injectIntl(FullScreenModal)
    ariaLabel="Plugin Marketplace"
    onClose={[Function]}
    show={true}
  >
    <div
      className="error-bar"
      id="error_bar"
    >
      <div
        className="error-bar__content"
      >
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Error connecting to the marketplace server. Please check your settings in the [System Console]({siteURL}/admin_console/plugins/plugin_management)."
          id="app.plugin.marketplace_plugins.app_error"
          values={
            Object {
              "siteURL": "http://example.com",
            }
          }
        />
      </div>
    </div>
    <div
      className="modal-marketplace"
      id="modal_marketplace"
    >
      <h1>
        <strong>
          <FormattedMessage
            defaultMessage="Plugin Marketplace"
            id="marketplace_modal.title"
          />
        </strong>
      </h1>
      <div
        className="filter-row filter-row--full"
      >
        <div
          className="col-sm-12"
        >
          <QuickInput
            className="form-control filter-textbox search_input"
            clearable={true}
            delayInputUpdate={false}
            id="searchMarketplaceTextbox"
            inputComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "LocalizedInput",
                "render": [Function],
              }
            }
            onClear={[Function]}
            onInput={[Function]}
            placeholder={
              Object {
                "defaultMessage": "Search Plugins",
                "id": "marketplace_modal.search",
              }
            }
            value=""
          />
        </div>
      </div>
      <Uncontrolled(Tabs)
        activeKey="allPlugins"
        className="tabs"
        defaultActiveKey="allPlugins"
        id="marketplaceTabs"
        onSelect={[Function]}
        unmountOnExit={true}
      >
        <Tab
          eventKey="allPlugins"
          title="All Plugins"
        >
          <LoadingScreen
            position="relative"
            style={Object {}}
          />
        </Tab>
        <Tab
          eventKey="installed"
          title="Installed (0)"
        >
          <InstalledPlugins
            changeTab={[Function]}
            installedPlugins={Array []}
          />
        </Tab>
      </Uncontrolled(Tabs)>
    </div>
  </injectIntl(FullScreenModal)>
</RootPortal>
`;

exports[`components/marketplace/ MarketplaceModal should render with no plugins installed 1`] = `
<RootPortal>
  <injectIntl(FullScreenModal)
    ariaLabel="Plugin Marketplace"
    onClose={[Function]}
    show={true}
  >
    <div
      className="modal-marketplace"
      id="modal_marketplace"
    >
      <h1>
        <strong>
          <FormattedMessage
            defaultMessage="Plugin Marketplace"
            id="marketplace_modal.title"
          />
        </strong>
      </h1>
      <div
        className="filter-row filter-row--full"
      >
        <div
          className="col-sm-12"
        >
          <QuickInput
            className="form-control filter-textbox search_input"
            clearable={true}
            delayInputUpdate={false}
            id="searchMarketplaceTextbox"
            inputComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "LocalizedInput",
                "render": [Function],
              }
            }
            onClear={[Function]}
            onInput={[Function]}
            placeholder={
              Object {
                "defaultMessage": "Search Plugins",
                "id": "marketplace_modal.search",
              }
            }
            value=""
          />
        </div>
      </div>
      <Uncontrolled(Tabs)
        activeKey="allPlugins"
        className="tabs"
        defaultActiveKey="allPlugins"
        id="marketplaceTabs"
        onSelect={[Function]}
        unmountOnExit={true}
      >
        <Tab
          eventKey="allPlugins"
          title="All Plugins"
        >
          <LoadingScreen
            position="relative"
            style={Object {}}
          />
        </Tab>
        <Tab
          eventKey="installed"
          title="Installed (0)"
        >
          <InstalledPlugins
            changeTab={[Function]}
            installedPlugins={Array []}
          />
        </Tab>
      </Uncontrolled(Tabs)>
    </div>
  </injectIntl(FullScreenModal)>
</RootPortal>
`;

exports[`components/marketplace/ MarketplaceModal should render with plugins installed 1`] = `
<RootPortal>
  <injectIntl(FullScreenModal)
    ariaLabel="Plugin Marketplace"
    onClose={[Function]}
    show={true}
  >
    <div
      className="modal-marketplace"
      id="modal_marketplace"
    >
      <h1>
        <strong>
          <FormattedMessage
            defaultMessage="Plugin Marketplace"
            id="marketplace_modal.title"
          />
        </strong>
      </h1>
      <div
        className="filter-row filter-row--full"
      >
        <div
          className="col-sm-12"
        >
          <QuickInput
            className="form-control filter-textbox search_input"
            clearable={true}
            delayInputUpdate={false}
            id="searchMarketplaceTextbox"
            inputComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "LocalizedInput",
                "render": [Function],
              }
            }
            onClear={[Function]}
            onInput={[Function]}
            placeholder={
              Object {
                "defaultMessage": "Search Plugins",
                "id": "marketplace_modal.search",
              }
            }
            value=""
          />
        </div>
      </div>
      <Uncontrolled(Tabs)
        activeKey="allPlugins"
        className="tabs"
        defaultActiveKey="allPlugins"
        id="marketplaceTabs"
        onSelect={[Function]}
        unmountOnExit={true}
      >
        <Tab
          eventKey="allPlugins"
          title="All Plugins"
        >
          <LoadingScreen
            position="relative"
            style={Object {}}
          />
        </Tab>
        <Tab
          eventKey="installed"
          title="Installed (1)"
        >
          <InstalledPlugins
            changeTab={[Function]}
            installedPlugins={
              Array [
                Object {
                  "download_url": "https://github.com/mattermost/mattermost-test/releases/download/v1.0.3/com.mattermost.nps-1.0.3.tar.gz",
                  "homepage_url": "https://github.com/mattermost/mattermost-test",
                  "installed_version": "1.0.3",
                  "manifest": Object {
                    "description": "This plugin is to test",
                    "id": "com.mattermost.test",
                    "minServerVersion": "5.14.0",
                    "name": "Test",
                    "version": "1.0.3",
                  },
                },
              ]
            }
          />
        </Tab>
      </Uncontrolled(Tabs)>
    </div>
  </injectIntl(FullScreenModal)>
</RootPortal>
`;
